Tried to fix title alignment

--- a/style.css
+++ b/style.css
@@ -50,9 +50,13 @@ h1 {
 .title {
     display: flex;
     padding: 0 5em;
-    flex-wrap: wrap;
-    justify-content: space-between;
     gap: 0.5em;
+    flex: 1;
+    flex-direction: row;
+}
+
+.kessokubox {
+    align-self: flex-end;
 }
 
 
@@ -62,7 +66,7 @@ h1 {
 }
 
 .kessokuband {
-    max-width: 50%;
+    max-width: 100%;
 }
 
 h2 {
